Fix issues with wrapping on mid-size screens, remove unnecessary nesting of grid

--- a/src/views/Intern/Arkivsjef/Arkivsjef.module.css
+++ b/src/views/Intern/Arkivsjef/Arkivsjef.module.css
@@ -22,8 +22,8 @@
 }
 
 .description {
-  padding: 1rem;
-  margin-top: 2rem;
+  /* padding: 1rem;
+  margin-top: 2rem; */
   /* #f3f3f3 */
   background-color: white;
   margin-bottom: 2rem;
